tests/miniJava/neg/004871_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] extends ) { return 0 ; } }
